Avoiding the overflow of links in forms; Not applying to .main a anymore because it can touch in links you don't want break-all.

--- a/bootstrap_admin/static/admin/css/base.css
+++ b/bootstrap_admin/static/admin/css/base.css
@@ -6,7 +6,6 @@ select {
 }
 .main a {
   text-decoration: none;
-  word-break: break-all;
 }
 .popup {
   padding-top: 10px;
